# csvdata-importer

./: .gitignore  README.md  README.rst  pyproject.toml  readthedocs.yml  requirements.txt
.github/workflows/: publish-to-pypi.yml
csvdata_importer/: importer.py  mapping.py
data_importer/: __init__.py  config.py  configdict.py  generate_mapping.py  import_file.py  importer.py  logging.conf  mapping.py
docs/: conf.py  examples.rst  index.rst
docs/_downloads/: example_mapping.json
tests/: conftest.py  generated_mapping.json  test.csv  test.json  test_config.py  test_generate_mapping.py  test_importer.py  test_mapping.json  test_mapping.py  test_mapping_type.py  test_process_mapping.py
